Added gitignore shizz

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 ExportedObj/
 .consulo/
 *.csproj
+*.htm
 *.unityproj
 *.sln
 *.suo
@@ -44,6 +45,7 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+*.vsconfig
 
 # Unity3D generated meta files
 *.pidb.meta
